tiles-repo/go-bumblebee-jazz/0.7.1/manifest/kustomize/front/front-deployment.yaml
apiVersion: apps/v1
kind: Deployment 
metadata:
  name: front
spec:
  selector:
    matchLabels:
      app: front 
  template:
    metadata:
      labels: 
        app: front 
    spec:
      terminationGracePeriodSeconds: 5
      containers:
      - name: front-go-bumblebee
        image:  herochinese/go-bumblebee-front:new-combo-jazz
        ports:
          - name: http
            containerPort: 9000
        resources:
          requests: 
            cpu: 100m
            memory: 64Mi
          limits:
            cpu: 200m
            memory: 128Mi
