tiles-repo/go-bumblebee-jazz/0.7.1/manifest/kustomize/front/front-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: front
spec: 
  type: ClusterIP
  selector:
    app: front
  ports:
  - name: http
    port: 9000
    targetPort: 9000
