tiles-repo/go-bumblebee-jazz/0.7.1/manifest/kustomize/front/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: front-gateway
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
  - port:
      number: 9000
      name: http
      protocol: HTTP
    hosts:
    - "*"
