tiles-repo/go-bumblebee-jazz/0.7.1/manifest/kustomize/front/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: front
spec:
  hosts:
  - "*"
  gateways:
  - front-gateway
  http:
  - match:
    - uri:
        prefix: /front
    route:
    - destination:
        host: front
        port:
          number: 9000
